fix leftmenu overlap

--- a/bm-react/src/component/discography.css
+++ b/bm-react/src/component/discography.css
@@ -41,7 +41,7 @@
     width: 40%;
   }
   .albums {
-    margin: 0px;
+    margin-left: 0;
     width: 100%;
   }
   .album {
